--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Посмотри в окно</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/result.css" />
+    <link rel="stylesheet" href="./styles/content_details.css" />
+    <link rel="stylesheet" href="./styles/button_states.css" />
+    <link rel="stylesheet" href="./styles/textfield_states.css" />
+    <link rel="stylesheet" href="./styles/label_states.css" />
+    <link rel="stylesheet" href="./styles/input_checkboxes_states.css" />
+    <link rel="stylesheet" href="./styles/content_card_link_states.css" />
+    <link rel="stylesheet" href="./styles/content_list_states.css" />
     <link rel="stylesheet" href="./styles/preloader.css" />
     <link rel="stylesheet" href="./styles/error.css" />
   </head>
